--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.logo g g {
+  @apply fill-slate-400;
+}
+
+.logo g g:nth-child(3) {
+  @apply fill-slate-600;
+}
