--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -70,12 +70,12 @@
         --chart-5: 340 75% 55%;
     }
 }
-/* 
+
 @layer base {
-    * {
+    /* * {
         @apply border-border;
-    }
+    } */
     body {
         @apply bg-background text-foreground;
     }
-} */
+}
